--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/Juriy/virtualclass/issues"
   },
-  "homepage": "https://github.com/Juriy/virtualclass#readme"
+  "homepage": "https://github.com/Juriy/virtualclass#readme",
+  "dependencies": {
+    "express": "^4.13.3",
+    "socket.io": "^1.4.4"
+  }
 }
